compiler-core/src/parse/snapshots/rakun_core__parse__tests__private_internal_type.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\n@internal\nrecord Wibble {\n  Wibble\n}\n"
---
error: Syntax error
  ┌─ /src/parse/error.rakun:2:1
  │
2 │ @internal
  │ ^^^^^^^^^ Redundant internal attribute

Only a public definition can be annotated as internal.
Hint: remove the `@internal` annotation.
